--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
     "private": true,
     "scripts": {
         "start": "node server.js",
-        "dev": "nodemon server.js"
+        "install": "cd client && npm install",
+        "build": "cd client && npm run build",
+        "server": "nodemon server.js",
+        "client": "npm start --prefix client",
+        "dev": "concurrently --kill-others \"npm run server\" \"npm run client\""
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "concurrently": "^7.0.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
