--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-jwt": "^6.1.1",
+        "js-utils-julseb": "^1.0.11",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.2.4",
+        "mongoose": "^6.2.5",
         "morgan": "^1.10.0",
         "nodemailer": "^6.7.2"
     },
