--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
         "dev": "concurrently --kill-others \"npm run server\" \"npm run client\""
     },
     "dependencies": {
+        "axios": "^0.26.1",
         "bcryptjs": "^2.4.3",
-        "concurrently": "^7.0.0",
+        "concurrently": "^7.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-jwt": "^6.1.1",
-        "js-utils-julseb": "^1.0.16",
+        "js-utils-julseb": "^1.0.17",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.2.7",
+        "mongoose": "^6.2.10",
         "morgan": "^1.10.0",
-        "nodemailer": "^6.7.2"
+        "nodemailer": "^6.7.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
