--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,18 @@
     "private": true,
     "proxy": "http://localhost:5005",
     "dependencies": {
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^14.0.4",
         "axios": "^0.26.1",
-        "components-react-julseb": "^3.0.3",
-        "js-utils-julseb": "^1.0.17",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
-        "styled-components": "^5.3.5",
+        "ts-utils-julseb": "^1.0.2",
+        "tsx-library-julseb": "^1.0.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
