--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,13 @@
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.0.0",
-        "@testing-library/user-event": "^14.0.4",
-        "axios": "^0.26.1",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^14.1.1",
+        "axios": "^0.20.0-0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.3.0",
-        "react-scripts": "5.0.0",
+        "react-scripts": "5.0.1",
         "ts-utils-julseb": "^1.0.2",
         "tsx-library-julseb": "^1.0.3",
         "web-vitals": "^2.1.4"
