--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,13 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^14.1.1",
-        "axios": "^0.20.0-0",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "axios": "^0.27.2",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "ts-utils-julseb": "^1.0.2",
-        "tsx-library-julseb": "^1.0.3",
+        "tsx-library-julseb": "^1.1.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
