--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
         "dev": "concurrently --kill-others \"npm run server\" \"npm run client\""
     },
     "dependencies": {
-        "axios": "^0.27.0",
         "bcryptjs": "^2.4.3",
         "concurrently": "^7.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
-        "express": "^4.17.3",
-        "express-jwt": "^7.5.0",
+        "express": "^4.18.1",
+        "express-jwt": "^7.6.2",
         "js-utils-julseb": "^1.0.17",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.3.1",
+        "mongoose": "^6.3.2",
         "morgan": "^1.10.0",
-        "nodemailer": "^6.7.3"
+        "nodemailer": "^6.7.4",
+        "ts-utils-julseb": "^1.0.2"
     },
     "devDependencies": {
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.16"
     }
 }
