--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,17 @@
     "private": true,
     "proxy": "http://localhost:5005",
     "dependencies": {
-        "@emotion/react": "^11.9.0",
-        "@emotion/styled": "^11.8.1",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
-        "@testing-library/user-event": "^14.1.1",
+        "@testing-library/user-event": "^14.2.0",
         "axios": "^0.27.2",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "styled-components": "^5.3.5",
         "ts-utils-julseb": "^1.0.10",
-        "tsx-library-julseb": "^1.1.3",
+        "tsx-library-julseb": "^2.0.6",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
