--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-jwt": "^7.7.2",
+        "js-utils-julseb": "^2.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.3.4",
         "morgan": "^1.10.0",
-        "nodemailer": "^6.7.5",
-        "ts-utils-julseb": "^1.0.10"
+        "nodemailer": "^6.7.5"
     },
     "devDependencies": {
         "nodemon": "^2.0.16"
